Fix letter spacing

--- a/assets/css/style.pcss
+++ b/assets/css/style.pcss
@@ -15,6 +15,7 @@ html {
     Roboto, 'Helvetica Neue', Arial, sans-serif;
   font-size: 16px;
   font-feature-settings: "palt" 1;
+  letter-spacing: 0.05em;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
